# dropdl

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
dropdl/: main.py
tests/: test_module.py
